更改了主题颜色，隐藏了“学科管理”

--- a/xzs-admin/src/styles/element-variables.scss
+++ b/xzs-admin/src/styles/element-variables.scss
@@ -4,10 +4,10 @@
 **/
 
 /* theme color */
-$--color-primary: #1890ff;
-$--color-success: #13ce66;
-$--color-warning: #FFBA00;
-$--color-danger: #ff4949;
+$--color-primary: #61a4e3;
+$--color-success: #84cbb5;
+$--color-warning: #ffeda1;
+$--color-danger: #c7491b;
 // $--color-info: #1E1E1E;
 
 $--button-font-weight: 400;
