--- a/xzs-admin/src/styles/variables.scss
+++ b/xzs-admin/src/styles/variables.scss
@@ -1,6 +1,6 @@
 // base color
-$blue:#324157;
-$light-blue:#3A71A8;
+$blue: #456488;
+$light-blue: #61a4e3;
 $red:#C03639;
 $pink: #E65D6E;
 $green: #30B08F;
@@ -9,15 +9,15 @@ $yellow:#FEC171;
 $panGreen: #30B08F;
 
 // sidebar
-$menuText:#bfcbd9;
-$menuActiveText:#409EFF;
-$subMenuActiveText:#f4f4f5; // https://github.com/ElemeFE/element/issues/12951
+$menuText: #fff6d4;
+$menuActiveText: #f0dcc1;
+$subMenuActiveText: #ffffff; // https://github.com/ElemeFE/element/issues/12951
 
-$menuBg:#304156;
-$menuHover:#263445;
+$menuBg: #4b678c;
+$menuHover: #7390b2;
 
-$subMenuBg:#1f2d3d;
-$subMenuHover:#001528;
+$subMenuBg: #5479a4;
+$subMenuHover: #7390b2;
 
 $sideBarWidth: 210px;
 
