--- a/xzs-admin/src/styles/sidebar.scss
+++ b/xzs-admin/src/styles/sidebar.scss
@@ -202,7 +202,7 @@
     }
 
     &::-webkit-scrollbar-thumb {
-      background: #99a9bf;
+      background: #ffffff;
       border-radius: 20px;
     }
   }
