去掉了管理员列表，隐藏了所有年级和学科选项

--- a/xzs-admin/src/styles/element-variables.scss
+++ b/xzs-admin/src/styles/element-variables.scss
@@ -6,7 +6,7 @@
 /* theme color */
 $--color-primary: #61a4e3;
 $--color-success: #84cbb5;
-$--color-warning: #ffeda1;
+$--color-warning: #ffe053;
 $--color-danger: #c7491b;
 // $--color-info: #1E1E1E;
 
