更换图片和标注

--- a/xzs-admin/src/styles/element-variables.scss
+++ b/xzs-admin/src/styles/element-variables.scss
@@ -4,7 +4,7 @@
 **/
 
 /* theme color */
-$--color-primary: #61a4e3;
+$--color-primary: #5480d7;
 $--color-success: #84cbb5;
 $--color-warning: #ffe053;
 $--color-danger: #c7491b;
